v0 to v1:
    - moved:
        - all examples from top level to examples/
        - all abstract/*go to top level
        - ed25519/, edwards/ and nist/ to group/
        - former nist/int.go to group/mod/int.go
        - eddsa to sign/eddsa
        - anon to sign/anon
        - cosi to sign/cosi
        - sign/schnorr.go to sign/schnorr/schnorr.go
        - math/{jacobi,sqrt} to group/mod/
        - config/key.go - the KeyPair struct + methods - to /util/key/
        - hash/ to util/hash
        - ints/ints.go to util/ints/ints.go
        - util/{reverse,grow,replace} to util/bytes/
        - group/encoding.go to util/encoding/encoding.go
        - subtle/ to util/subtle
        - random to util/random
        - test/ inside util/test
        - clique/clique.go to proof/clique.go 
        - proof/dleq.go -> proof/dleq/dleq.go
        - anon/keypair() hiding -> util/key/GenHiding() 

    - removed:
        - abstract
        - base64
        - clique
        - pbc
        - openssl
        - sodium
        - nego
        - poly
        - suites
        - config/file,
        - gofmt.sh
        - GO-WISHLIST

    - Changed order of arguments for `Point.Mul()`. It now follows the
      mathematical additive notation with the scalar in front:
        -> `Mul(kyber.Scalar, kyber.Point) kyber.Point`. 
    - Added `SetVarTime` to `Scalar` and `Point` that may use a variable time
      implementation if available.
    - commented out the dh_test.go which is not up-to-date anymore
    - taken onet/crypto/key{_test}.go to kyber/util/encoding
        + Removed abstract.Suite, only taking kyber.Group now
    - new package group/internal/marshalling for `{Read,Write}{Scalar,Point}` used by all
      suite implementations.